[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/InteractiveConsole.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/MainDialog/DialogPageSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/commodities/TradingList.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/MainDialog/DialogMapPanel.gd" type="Script" id=4]
[ext_resource path="res://ui/StarmapPanel.tscn" type="PackedScene" id=5]

[node name="DialogMapPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="GridContainer" parent="All"]
margin_right = 295.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogPageSelector" parent="All/Info" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 295.0
margin_bottom = 20.0
enable_Map = false

[node name="Bottom" type="VSplitContainer" parent="All/Info"]
margin_top = 24.0
margin_right = 295.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Console" parent="All/Info/Bottom" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 295.0
margin_bottom = 215.0
allow_input = false

[node name="Markets" type="GridContainer" parent="All/Info/Bottom"]
margin_top = 227.0
margin_right = 295.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.6

[node name="Middle" type="GridContainer" parent="All/Info/Bottom/Markets"]
margin_right = 295.0
margin_bottom = 24.0
columns = 2

[node name="Label" type="Label" parent="All/Info/Bottom/Markets/Middle"]
margin_top = 5.0
margin_right = 201.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Planet"

[node name="SalePrice" type="CheckBox" parent="All/Info/Bottom/Markets/Middle"]
margin_left = 205.0
margin_right = 295.0
margin_bottom = 24.0
text = "Sale Price"

[node name="Tabs" type="TabContainer" parent="All/Info/Bottom/Markets"]
margin_top = 28.0
margin_right = 295.0
margin_bottom = 349.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Search" type="PanelContainer" parent="All/Info/Bottom/Markets/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ShipParts" parent="All/Info/Bottom/Markets/Tabs" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
buy_and_sell = false
market_type = 1

[node name="Market" parent="All/Info/Bottom/Markets/Tabs" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
buy_and_sell = false

[node name="StarmapPanel" parent="All" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 307.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_stretch_ratio = 2.4
show_space_objects = true
[connection signal="page_selected" from="All/Info/DialogPageSelector" to="." method="_on_DialogPageSelector_page_selected"]
[connection signal="toggled" from="All/Info/Bottom/Markets/Middle/SalePrice" to="." method="_on_SalePrice_toggled"]
[connection signal="tab_changed" from="All/Info/Bottom/Markets/Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="product_selected" from="All/Info/Bottom/Markets/Tabs/ShipParts" to="." method="_on_TradingList_product_selected"]
[connection signal="product_selected" from="All/Info/Bottom/Markets/Tabs/Market" to="." method="_on_TradingList_product_selected"]
[connection signal="deselect" from="All/StarmapPanel" to="." method="_on_StarmapPanel_deselect"]
[connection signal="select_space_object" from="All/StarmapPanel" to="." method="_on_StarmapPanel_select_space_object"]
